kiểm tra code trước khi push vào nhánh Font-end