@@ -1,13 +1,16 @@
 plugins {
   id 'java'
+  id 'application'
+  id 'org.openjfx.javafxplugin' version '0.0.14'
 }
 
-group 'com.example'
-version '1.0-SNAPSHOT'
+group = 'com.booking.train'
+version = '1.0-SNAPSHOT'
 
 java {
-  sourceCompatibility = JavaVersion.VERSION_22
-  targetCompatibility = JavaVersion.VERSION_22
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(23)
+  }
 }
 
 repositories {
@@ -20,38 +23,54 @@ ext {
 
 tasks.withType(JavaCompile) {
   options.encoding = 'UTF-8'
-  sourceCompatibility = '20'
-  targetCompatibility = '20'
+}
+
+javafx {
+  version = "22"
+  modules = [ 'javafx.controls', 'javafx.fxml' ]
+}
+
+application {
+  mainClass = 'BookingTrainTicketApplication'
+  run {
+    doFirst {
+      def javafxPath = configurations.runtimeClasspath.asPath
+      jvmArgs = [
+              "--module-path", javafxPath,
+              "--add-modules", "javafx.controls,javafx.fxml"
+      ]
+    }
+  }
+}
+
+tasks.named('run', JavaExec).configure {
+  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
 }
 
 dependencies {
+  // Hibernate + JPA
   implementation 'org.hibernate:hibernate-core:6.0.2.Final'
+  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
+  implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
   implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
 
-  // Jakarta Persistence (JPA) API
-  implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'  // Thêm dòng này
-
-  // MariaDB JDBC Driver
+  // MariaDB JDBC driver
   implementation 'org.mariadb.jdbc:mariadb-java-client:3.5.1'
 
   // Lombok
   compileOnly 'org.projectlombok:lombok:1.18.36'
   annotationProcessor 'org.projectlombok:lombok:1.18.36'
-
   testCompileOnly 'org.projectlombok:lombok:1.18.36'
   testAnnotationProcessor 'org.projectlombok:lombok:1.18.36'
+
+  // Data Faker
   implementation 'net.datafaker:datafaker:2.3.0'
 
-  // JUnit
+  // JUnit 5
   testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
   testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
-
-  // mysql
-  implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
 }
 
 test {
   useJUnitPlatform()
 }
-
-
